# mshuff

./: .gitignore  README.md  setup.cfg
docs/: PLAYLIST_CONFIG.md
example-config/: 90s_hip_hop.json  alt_folk.json  classic_rock.json  example_random.json  expansions.json  house_party.json  indie_pres.json  low_key_indie.json  mellow_rnb.json  morning_focus.json  the_groove.json  throwback_pres.json  upbeat_indie.json
examples/: example-show.json  example_random.json  example_show.json
mshuff/: __main__.py  api.py  playlist.py  settings.py  util.py
