[metadata]
name = mshuff
version = attr: mshuff.settings.__version__
description = Smarter shuffling for the libretime API
long_description = file: README.md
author = Josh Davies
author_email = joshdavies00@gmail.com
keywords = libretime
license = GNU General Public License,
classifiers = 
    Environment :: Shell
    Programming Language :: Python 3.5

[options]
packages = mshuff
install_requires = 
    requests

[options.entry_points]
console_scripts =
    mshuff = mshuff.__main__:main

